<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_half"
            android:paddingStart="@dimen/activity_half"
            android:paddingEnd="@dimen/activity_half"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/activity_half"
            android:paddingEnd="@dimen/activity_half"
            android:text="@string/text_label_popular_countries"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSearchView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/color_hint"
            android:hint="@string/search_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:textSize="16sp"
            tools:ignore="LabelFor,MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/countriesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_gray"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="1"
            tools:ignore="MissingConstraints"
            tools:itemCount="7"
            tools:listitem="@layout/row_item_countries" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

